lmbook/lmbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lmbook-record-service
spec:
  #  三个副本
  replicas: 2
  selector:
    matchLabels:
      app: lmbook-record
  template:
    metadata:
      labels:
        #        这个 lmbook-record 一定要和前面的 selector 的 matchLabels 匹配上
        app: lmbook-record
    #        这个是 Deployment 管理的 Pod 的模板
    spec:
      #      Pod 里面运行的所有的 container
      containers:
        - name: lmbook-record
          image: flycash/lmbook:v0.0.1
          ports:
            - containerPort: 8080
