lmbook/lmbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmbook-record
spec:
  selector:
    app: lmbook-record
  ports:
    - protocol: TCP
      port: 98
      targetPort: 8080
  type: ClusterIP
